--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,10 @@
 services:
   - type: web
-    name: corn-ai-analyzer
+    name: corn-ai-backend
     env: python
-    buildCommand: ""
-    startCommand: gunicorn app:app
+    buildCommand: "pip install -r requirements.txt"
+    startCommand: "gunicorn app:app" # adjust for your actual entry point
+    runtime: python
+    build:
+      env:
+        PYTHON_VERSION: 3.11.9
