--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,10 @@
 services:
   - type: web
-    name: corn-ai-backend
+    name: agri-drone-backend
     env: python
-    buildCommand: "pip install -r requirements.txt"
-    startCommand: "gunicorn app:app" # adjust for your actual entry point
+    region: oregon
+    buildCommand: pip install --upgrade pip && pip install -r requirements.txt
+    startCommand: gunicorn app:app
     runtime: python
     build:
       env:
