--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-﻿aiohappyeyeballs==2.6.1
+aiohappyeyeballs==2.6.1
 aiohttp==3.10.11
 aiosignal==1.4.0
 async-timeout==5.0.1
@@ -18,7 +18,7 @@ flask-cors==6.0.1
 fonttools==4.59.0
 frozenlist==1.7.0
 idna==3.10
-inference-sdk==0.51.8
+inference-sdk>=0.50.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
 kiwisolver==1.4.8
@@ -46,5 +46,8 @@ typing_extensions==4.14.1
 urllib3==2.5.0
 Werkzeug==3.1.3
 yarl==1.20.1
-
+flask
+flask-cors
+inference-sdk>=0.50.4
+Pillow
 gunicorn
