--- a/requirements.txt
+++ b/requirements.txt
@@ -1,53 +1,28 @@
-aiohappyeyeballs==2.6.1
-aiohttp==3.10.11
-aiosignal==1.4.0
-async-timeout==5.0.1
-attrs==25.3.0
-backoff==2.2.1
-blinker==1.9.0
-certifi==2025.7.14
-charset-normalizer==3.4.2
-click==8.2.1
-colorama==0.4.6
-contourpy==1.3.2
-cycler==0.12.1
-dataclasses-json==0.6.7
-defusedxml==0.7.1
-Flask==3.1.1
-flask-cors==6.0.1
-fonttools==4.59.0
-frozenlist==1.7.0
-idna==3.10
-inference-sdk>=0.50.0
-itsdangerous==2.2.0
-Jinja2==3.1.6
-kiwisolver==1.4.8
-MarkupSafe==3.0.2
-marshmallow==3.26.1
-matplotlib==3.10.3
-multidict==6.6.3
-mypy_extensions==1.1.0
-numpy==2.2.6
-opencv-python==4.10.0.84
-packaging==25.0
-pillow==11.3.0
-propcache==0.3.2
-py-cpuinfo==9.0.0
-pyparsing==3.2.3
-python-dateutil==2.9.0.post0
-PyYAML==6.0.2
-requests==2.32.4
-scipy==1.15.3
-six==1.17.0
-supervision==0.25.1
-tqdm==4.67.1
+Flask==2.3.3
+flask-cors==4.0.0
+gunicorn==21.2.0
+
+# Roboflow Inference SDK
+inference-sdk==0.50.5
+
+# Image & Drawing
+Pillow==10.2.0
+
+# Image processing and numerical computing
+opencv-python==4.7.0.72
+numpy==1.24.4
+scipy==1.10.1
+
+# Utility Libraries
+requests==2.31.0
+tqdm==4.66.1
+
+# Optional, useful for drawing outputs
+matplotlib==3.7.1
+fonttools==4.40.0
+
+# Avoid conflicting or broken dependencies
+typing-extensions==4.5.0
 typing-inspect==0.9.0
-typing_extensions==4.14.1
-urllib3==2.5.0
-Werkzeug==3.1.3
-yarl==1.20.1
-flask
-flask-cors
-inference-sdk>=0.50.4
-Pillow
-gunicorn
+marshmallow==3.20.1
+dataclasses-json==0.5.7
