--- a/requirements.txt
+++ b/requirements.txt
@@ -2,26 +2,19 @@ Flask==2.3.3
 flask-cors==4.0.0
 gunicorn==21.2.0
 
-# Roboflow Inference SDK
 inference-sdk==0.50.5
-
-# Image & Drawing
 Pillow==10.2.0
 
-# Image processing and numerical computing
-opencv-python==4.7.0.72
+opencv-python-headless==4.7.0.72
 numpy==1.24.4
 scipy==1.10.1
 
-# Utility Libraries
 requests==2.31.0
 tqdm==4.66.1
 
-# Optional, useful for drawing outputs
 matplotlib==3.7.1
 fonttools==4.40.0
 
-# Avoid conflicting or broken dependencies
 typing-extensions==4.5.0
 typing-inspect==0.9.0
 marshmallow==3.20.1
